--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-joi-validation": "^5.0.1",
@@ -20,5 +21,6 @@
     "nodemon": "^2.0.22",
     "socket.io": "^4.7.1",
     "uuid": "^9.0.0"
-  }
+  },
+  "devDependencies": {}
 }
